<resources>
    <string name="app_name">Text</string>
    <string name="sign_in">Sign in</string>
    <string name="name">Name</string>
    <string name="done">Done</string>
    <string name="group_name">Group name</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="no_messages_found">No messages found</string>
    <string name="qr_code">qr_code</string>
    <string name="no_groups_found">No groups found</string>
    <string name="scan">Scan</string>
    <string name="add">Add</string>
    <string name="sign_out">Sign out</string>
    <string name="exit_group">Exit Group</string>
    <string name="show_code">Show code</string>
</resources>