<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="2dp"
    android:paddingTop="2dp"
    android:paddingBottom="15dp"
    tools:context=".activities.GroupActivity">

    <ProgressBar
        android:id="@+id/groupProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:progress="100" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messageRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_below="@id/groupProgressBar"
        android:paddingHorizontal="10dp"
        android:paddingBottom="5dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="3dp"
        android:paddingBottom="5dp">

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_textinput_bg"
            android:hint="@string/message"
            android:inputType="textMultiLine|textCapSentences"
            android:maxLines="5"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:textColor="@android:color/white"
            android:textColorHint="#BBB" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:contentDescription="@string/send"
            android:elevation="0dp"
            android:enabled="false"
            android:focusable="true"
            app:elevation="0dp"
            app:srcCompat="@drawable/ic_baseline_send_24"
            app:tint="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/noMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_messages_found"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:visibility="gone" />
</RelativeLayout>